--- a/AI/ai2.ipynb
+++ b/AI/ai2.ipynb
@@ -129,10 +129,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "4eaf1be304415beee96765ae99c3f893cc8312c7f1196698e6029668e9aeb3e5"
+   "hash": "5179d32cf6ec497baf3f8a3ef987cc77c5d2dc691fdde20a56316522f61a7323"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
