submit python work

--- a/pythonWork/work12/ex1.ipynb
+++ b/pythonWork/work12/ex1.ipynb
@@ -84,18 +84,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "num4 = [2,4,5,7]\n",
-    "def exercise_3(lists):\n",
-    "    num3 = len(lists)\n",
+    "num4 = [2,4,5,7,9]\n",
+    "num5 = [2,4,5,5,7,9]\n",
+    "def exercise_4(lists):\n",
+    "    num6 = len(lists)\n",
     "    lists = set(lists)\n",
-    "    if len(lists) < num3:\n",
-    "        print(0)\n",
+    "    if len(lists) < num6:\n",
+    "        return False\n",
     "    else:\n",
-    "        print(sum(lists))"
+    "        return True\n",
+    "exercise_4(num4)\n",
+    "exercise_4(num5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "60\n",
+      "90\n",
+      "40\n",
+      "80\n",
+      "50\n",
+      "20\n",
+      "70\n",
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[30, 60, 90, 40, 80, 50, 20, 70, 10]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1 = [10,20,30,40,50,60,70,80,90]\n",
+    "def exercise_5(lists):\n",
+    "    list2 = []\n",
+    "    while True:\n",
+    "        lists = lists\n",
+    "        if len(lists) > 3:\n",
+    "            for i in range(2,len(lists)-1,2):\n",
+    "                print(lists[i])\n",
+    "                list2.append(lists[i])\n",
+    "                del lists[i]\n",
+    "        elif len(lists) == 3:\n",
+    "            print(lists[1])\n",
+    "            list2.append(lists[1])\n",
+    "            del lists[1]\n",
+    "        elif len(lists) < 3:\n",
+    "            print(lists[-1])\n",
+    "            print(lists[-2])\n",
+    "            list2.append(lists[-1])\n",
+    "            list2.append(lists[-2])\n",
+    "            del lists[-1]\n",
+    "            return list2\n",
+    "exercise_5(list1)"
    ]
   }
  ],
