--- a/pythonWork/work12/ex3.ipynb
+++ b/pythonWork/work12/ex3.ipynb
@@ -5,7 +5,99 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#pass Exercise-1\n",
+    "#details in ex2.py/exercise_6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pass Exercise-2\n",
+    "#details in work10/EX3.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pass Exercise-3\n",
+    "#details in work10/EX4.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pass Exercise-4\n",
+    "#details in work10/EX5.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num1=145\n",
+    "num2=122\n",
+    "num3=1010\n",
+    "def exercise_6(num1,num2,num3):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HPNTYO\n",
+      "JVA\n"
+     ]
+    }
+   ],
+   "source": [
+    "string1 = \"PPYYYTTHON\"\n",
+    "string2 = \"JAVA\"\n",
+    "def exercise_8(string):\n",
+    "    lists=[]\n",
+    "    for i in string:\n",
+    "        lists.append(i)\n",
+    "    lists = set(lists)\n",
+    "    string = (''.join(lists))\n",
+    "    print(string)\n",
+    "exercise_8(string1)\n",
+    "exercise_8(string2)\n"
+   ]
   }
  ],
  "metadata": {
@@ -18,7 +110,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
   "orig_nbformat": 4
