--- a/pythonProject/AI/ai3.ipynb
+++ b/pythonProject/AI/ai3.ipynb
@@ -220,9 +220,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From d:\\anaconda\\envs\\tensorflow\\lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "non-resource variables are not supported in the long term\n",
+      "WARNING:tensorflow:From C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_22788\\1010306761.py:8: read_data_sets (from tensorflow.core.example.tutorials.mnist.input_data) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as: tensorflow_datasets.load('mnist')\n",
+      "WARNING:tensorflow:From d:\\anaconda\\envs\\tensorflow\\lib\\site-packages\\tensorflow\\core\\example\\tutorials\\mnist\\input_data.py:296: _maybe_download (from tensorflow.core.example.tutorials.mnist.input_data) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please write your own downloading logic.\n",
+      "WARNING:tensorflow:From d:\\anaconda\\envs\\tensorflow\\lib\\site-packages\\tensorflow\\core\\example\\tutorials\\mnist\\input_data.py:299: _extract_images (from tensorflow.core.example.tutorials.mnist.input_data) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
+      "Extracting /mnist_data\\train-images-idx3-ubyte.gz\n",
+      "WARNING:tensorflow:From d:\\anaconda\\envs\\tensorflow\\lib\\site-packages\\tensorflow\\core\\example\\tutorials\\mnist\\input_data.py:304: _extract_labels (from tensorflow.core.example.tutorials.mnist.input_data) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
+      "Extracting /mnist_data\\train-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From d:\\anaconda\\envs\\tensorflow\\lib\\site-packages\\tensorflow\\core\\example\\tutorials\\mnist\\input_data.py:112: _dense_to_one_hot (from tensorflow.core.example.tutorials.mnist.input_data) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.one_hot on tensors.\n",
+      "Extracting /mnist_data\\t10k-images-idx3-ubyte.gz\n",
+      "Extracting /mnist_data\\t10k-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From d:\\anaconda\\envs\\tensorflow\\lib\\site-packages\\tensorflow\\core\\example\\tutorials\\mnist\\input_data.py:328: _DataSet.__init__ (from tensorflow.core.example.tutorials.mnist.input_data) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/_DataSet.py from tensorflow/models.\n",
+      "MNIST LOAD READY\n",
+      "CNN READY\n",
+      "<tf.Variable 'Variable_8:0' shape=(3, 3, 1, 64) dtype=float32>\n",
+      "Epoch:000/015 cost:nan\n",
+      "Train accuracy:0.188\n",
+      "Epoch:001/015 cost:nan\n",
+      "Train accuracy:0.125\n",
+      "Epoch:002/015 cost:nan\n",
+      "Train accuracy:0.062\n",
+      "Epoch:003/015 cost:nan\n",
+      "Train accuracy:0.062\n",
+      "WARNING:tensorflow:From d:\\anaconda\\envs\\tensorflow\\lib\\site-packages\\tensorflow\\python\\training\\saver.py:1052: remove_checkpoint (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use standard file APIs to delete files with this prefix.\n",
+      "Epoch:004/015 cost:nan\n",
+      "Train accuracy:0.000\n",
+      "Epoch:005/015 cost:nan\n",
+      "Train accuracy:0.125\n",
+      "Epoch:006/015 cost:nan\n",
+      "Train accuracy:0.125\n",
+      "Epoch:007/015 cost:nan\n",
+      "Train accuracy:0.062\n",
+      "Epoch:008/015 cost:nan\n",
+      "Train accuracy:0.062\n",
+      "Epoch:009/015 cost:nan\n",
+      "Train accuracy:0.000\n",
+      "Epoch:010/015 cost:nan\n",
+      "Train accuracy:0.062\n",
+      "Epoch:011/015 cost:nan\n",
+      "Train accuracy:0.125\n",
+      "Epoch:012/015 cost:nan\n",
+      "Train accuracy:0.125\n",
+      "Epoch:013/015 cost:nan\n",
+      "Train accuracy:0.062\n",
+      "Epoch:014/015 cost:nan\n",
+      "Train accuracy:0.125\n",
+      "Optimization Finished\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "tf.compat.v1.disable_eager_execution()\n",
@@ -431,9 +500,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "5179d32cf6ec497baf3f8a3ef987cc77c5d2dc691fdde20a56316522f61a7323"
-  },
   "kernelspec": {
    "display_name": "Python 3.9.7 ('base')",
    "language": "python",
@@ -451,7 +517,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "5179d32cf6ec497baf3f8a3ef987cc77c5d2dc691fdde20a56316522f61a7323"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
