--- a/lzuoj/tsk.ipynb
+++ b/lzuoj/tsk.ipynb
@@ -245,14 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 6\n"
+      "0 0\n"
      ]
     }
    ],
@@ -278,10 +278,13 @@
     "    return 1\n",
     "\n",
     "for i in b:\n",
-    "    if juc(i) == 1:\n",
-    "        c = c+1\n",
+    "    if i == 1:\n",
+    "        a-=1\n",
     "    else:\n",
-    "        pass\n",
+    "        if juc(i) == 1:\n",
+    "            c = c+1\n",
+    "        else:\n",
+    "            pass\n",
     "print(str(c)+' '+str(a-c))"
    ]
   },
@@ -294,14 +297,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "156G1606812M353K680B\n"
+      "439092G26M326K849B\n"
      ]
     }
    ],
@@ -318,7 +321,7 @@
     "    b = int(c/1024)\n",
     "    c = c%1024\n",
     "    a = int(b/1024)\n",
-    "    a = b%1024\n",
+    "    b = b%1024\n",
     "    A = str(a)+'G'\n",
     "    B = str(b)+'M'\n",
     "    C = str(c)+'K'\n",
@@ -335,6 +338,185 @@
     "    return print(''.join(e))\n",
     "sol(x)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "a = int(input())\n",
+    "b = input().split()\n",
+    "b[:] = [int(i) for i in b]\n",
+    "\n",
+    "print(numpy.bincount(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = int(input())\n",
+    "b = input().split()\n",
+    "b[:] = [int(i) for i in b]\n",
+    "array = np.array(sorted(b))\n",
+    "vals,counts = np.unique(array, return_counts=True)\n",
+    "counts = list(counts)\n",
+    "value = max(counts)\n",
+    "count = set(counts)\n",
+    "vals = list(vals)\n",
+    "if len(count) == 1:\n",
+    "    print(-1)\n",
+    "else:\n",
+    "    lst1 = []\n",
+    "    lst2 = []\n",
+    "    for m in range(len(counts)):\n",
+    "        if counts[m] == value:\n",
+    "            lst1.append(m)\n",
+    "    for n in lst1:\n",
+    "        lst2.append(vals[n])\n",
+    "    lst = sorted(lst2)\n",
+    "    lst[:] = [str(j) for j in lst]\n",
+    "    s = ' '.join(lst)\n",
+    "    print(s.rstrip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6000000000000001"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Double"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "246915\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "b = a%10\n",
+    "c = int(a/10)\n",
+    "c = c*2\n",
+    "b = b*2\n",
+    "d = b%7\n",
+    "b = int(b/7)\n",
+    "e = c*10 + b*10 + d\n",
+    "print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_37904\\2916110412.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mjinwei\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mlist1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mnum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[0mlist1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mnum\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "list1 = []\n",
+    "for i in a:\n",
+    "    list1.append(i)\n",
+    "list1[:] = [int(j)*2 for j in list1]\n",
+    "list1 = list1[::-1]\n",
+    "def jinwei(list1):\n",
+    "    for m in range(len(list1)-1):\n",
+    "        if list1[m] >= 7:\n",
+    "            list1[m+1] = list1[m+1] + 1\n",
+    "            list1[m] = list1[m] - 7\n",
+    "            jinwei(list1)\n",
+    "        else:\n",
+    "            pass\n",
+    "jinwei(list1)\n",
+    "list1 = list1[::-1]\n",
+    "num = int((list1[0] + int(list1[1]/7))/7)\n",
+    "list1[-1] = list1[-1]%7\n",
+    "if num != 0:\n",
+    "    list1.insert(0,num)\n",
+    "    list1[1] = list1[1]-7\n",
+    "else:\n",
+    "    pass\n",
+    "print(list1)\n",
+    "list1[:] = [str(n) for n in list1]\n",
+    "print(''.join(list1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matrix Transpose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
