--- a/lzuoj/tsk.ipynb
+++ b/lzuoj/tsk.ipynb
@@ -513,10 +513,387 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4\n",
+      "2 3 4 5\n",
+      "3 4 5 6\n",
+      "4 5 6 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = input().split()\n",
+    "a[:] = [int(i) for i in a]\n",
+    "list1 = []\n",
+    "list2 = []\n",
+    "\n",
+    "def inputarray(num):\n",
+    "    i = 0\n",
+    "    while i < num:\n",
+    "        b = input().split()\n",
+    "        b[:] = [int(i) for i in b]\n",
+    "        list1.append(b)\n",
+    "        i = i+1\n",
+    "\n",
+    "def change(lists):\n",
+    "    lists = np.array(lists)\n",
+    "    lists = lists.transpose()\n",
+    "    for j in lists:\n",
+    "        j = ' '.join(repr(e) for e in j)\n",
+    "        list2.append(j)\n",
+    "    for i in list2:\n",
+    "        print(i)\n",
+    "\n",
+    "inputarray(a[0])\n",
+    "change(list1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Guess The Number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "? 500000000\n",
+      "? 750000000\n",
+      "? 625000000\n",
+      "? 562500000\n",
+      "? 531250000\n",
+      "? 515625000\n",
+      "? 507812500\n",
+      "? 503906250\n",
+      "? 501953125\n",
+      "? 500976562\n",
+      "? 500488281\n",
+      "? 500244140\n",
+      "? 500122070\n",
+      "? 500061035\n",
+      "? 500030517\n",
+      "? 500015258\n",
+      "? 500007629\n",
+      "? 500003814\n",
+      "? 500001907\n",
+      "? 500000953\n",
+      "? 500000476\n",
+      "? 500000238\n",
+      "? 500000119\n",
+      "? 500000059\n",
+      "? 500000029\n",
+      "? 500000014\n",
+      "? 500000007\n",
+      "? 500000003\n",
+      "? 500000001\n",
+      "? 500000000\n",
+      "? 500000000\n",
+      "? 500000000\n",
+      "? 500000000\n",
+      "? 500000000\n",
+      "? 500000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def bs():\n",
+    "    i = 0\n",
+    "    low=0\n",
+    "    high=10**9\n",
+    "    while i<35:\n",
+    "        mid = int((low+high)/2)\n",
+    "        print('? '+ str(mid))\n",
+    "        a = input()\n",
+    "        if a == '=':\n",
+    "            return print('! '+str(mid))\n",
+    "        elif a == '<':\n",
+    "            low = mid+1\n",
+    "            i = i+1\n",
+    "        else:\n",
+    "            high = mid-1\n",
+    "            i = i+1\n",
+    "bs()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trigonometric Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.36\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = float(input())\n",
+    "b = float(2*a/(1+a**2)+(1-a**2)/(1+a**2))\n",
+    "print('%.2f' % b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "★★温暖的力量★★"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "list1 = []\n",
+    "list2 = []\n",
+    "list3 = []\n",
+    "list4 = []\n",
+    "\n",
+    "def inputnum(a):\n",
+    "    i = 0\n",
+    "    while i<a:\n",
+    "        b = int(input())\n",
+    "        list1.append(b)\n",
+    "        i = i+1\n",
+    "\n",
+    "def sol(a):\n",
+    "    inputnum(a)\n",
+    "    for j in list1:\n",
+    "        if j == 1:\n",
+    "            j = -1\n",
+    "        else:\n",
+    "            juc(j)\n",
+    "    for i in list4:\n",
+    "        print(i)\n",
+    "\n",
+    "def juc(j):\n",
+    "    for i in range(2,j-1):\n",
+    "        for n in range(2,i):\n",
+    "            m = i%n\n",
+    "            list2.append(m)\n",
+    "        if 0 in list2:\n",
+    "            pass\n",
+    "        else:\n",
+    "            list3.append(i)\n",
+    "    maxnum = max(list3)\n",
+    "    list4.append(maxnum)\n",
+    "\n",
+    "sol(a)\n",
+    "\n",
+    "#求输入数出它以外的最大质数\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "list1 = []\n",
+    "\n",
+    "def sol(j):\n",
+    "    if j == 1:\n",
+    "        return print(-1)\n",
+    "    if j == 2:\n",
+    "        return print(-1)\n",
+    "    if j == 3:\n",
+    "        return print(-1)\n",
+    "    else:\n",
+    "        b = int(j/2)\n",
+    "        print(b)\n",
+    "\n",
+    "def inputnum(a):\n",
+    "    i = 0\n",
+    "    while i<a:\n",
+    "        b = int(input())\n",
+    "        list1.append(b)\n",
+    "        i = i+1\n",
+    "    for j in list1:\n",
+    "        sol(j)\n",
+    "\n",
+    "inputnum(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "★★翻滚吧硬币★★"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.71238898038469 10.711780178355948 16.919052595158906\n",
+      "0.8182775882330445\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "class Triangle():\n",
+    "    def __init__(self,a,b,c):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "        self.c = c\n",
+    "\n",
+    "    def angleA(self):\n",
+    "        agA = math.acos((self.b**2 + self.c**2-self.a**2)/(2*self.b*self.c))\n",
+    "        return agA\n",
+    "    \n",
+    "    def angleB(self):\n",
+    "        agB = math.acos((self.c**2 + self.a**2-self.b**2)/(2*self.a*self.c))\n",
+    "        return agB\n",
+    "    \n",
+    "    def angleC(self):\n",
+    "        agC = math.acos((self.a**2 + self.b**2-self.c**2)/(2*self.a*self.b))\n",
+    "        return agC\n",
+    "\n",
+    "i=0\n",
+    "time = int(input())\n",
+    "while i<time:\n",
+    "    A,B,C=map(int,input().split())\n",
+    "    a,b,c=C+B,A+C,B+A\n",
+    "    tr = Triangle(a, b, c)\n",
+    "    bound1 = math.pi*A*2 - A*tr.angleA()*2\n",
+    "    bound2 = math.pi*B*2 - B*tr.angleB()*2\n",
+    "    bound3 = math.pi*C*2 - C*tr.angleC()*2\n",
+    "    print(bound1,bound2,bound3)\n",
+    "    num1 = (bound1+bound2)/(math.pi*C*2)\n",
+    "    num2 = (bound2+bound3)/(math.pi*A*2)\n",
+    "    num3 = (bound1+bound3)/(math.pi*B*2)\n",
+    "    print(min(num1,num2,num3))\n",
+    "    i=i+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =  5\n",
+      "b =  5\n",
+      "c =  5\n",
+      "angleA = 1.0471975511965979\n",
+      "angleB = 1.0471975511965979\n",
+      "angleC = 1.0471975511965979\n",
+      "square = 10.825317547305483\n",
+      "circle = 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "class Triangle():\n",
+    "    def __init__(self,a,b,c):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "        self.c = c\n",
+    "        \n",
+    "    def angleA(self):\n",
+    "        agA = math.acos((self.b**2 + self.c**2-self.a**2)/(2*self.b*self.c))\n",
+    "        return agA\n",
+    "    \n",
+    "    def angleB(self):\n",
+    "        agB = math.acos((self.c**2 + self.a**2-self.b**2)/(2*self.a*self.c))\n",
+    "        return agB\n",
+    "    \n",
+    "    def angleC(self):\n",
+    "        agC = math.acos((self.a**2 + self.b**2-self.c**2)/(2*self.a*self.b))\n",
+    "        return agC\n",
+    "    \n",
+    "    def square(self):\n",
+    "        p = (self.a + self.b + self.c)/2\n",
+    "        s = math.sqrt(p*(p-self.a)*(p-self.b)*(p-self.c))\n",
+    "        return s\n",
+    "    \n",
+    "    def circle(self):\n",
+    "        cz = self.a + self.b + self.c\n",
+    "        return cz\n",
+    "    \n",
+    "    \n",
+    "a,b,c =map(int,input(\"请输入三角形的三条边长：\").split())\n",
+    "\n",
+    "if a<= 0 or b <= 0 or c <= 0 :\n",
+    "    print(\"输入错误，请重新输入：\")\n",
+    "elif any((\n",
+    "        a + b <= c,\n",
+    "        b + c <= a,\n",
+    "        c + a <= b \n",
+    "        )):\n",
+    "    print(\"无法构成三角形\")\n",
+    "\n",
+    "else:\n",
+    "    tr1 = Triangle(a, b, c)\n",
+    "    print(\"a = \",tr1.a)\n",
+    "    print(\"b = \",tr1.b)\n",
+    "    print(\"c = \",tr1.c)\n",
+    "    print(\"angleA =\",tr1.angleA())\n",
+    "    print(\"angleB =\",tr1.angleB())\n",
+    "    print(\"angleC =\",tr1.angleC())\n",
+    "    print(\"square =\",tr1.square())\n",
+    "    print(\"circle =\",tr1.circle())"
+   ]
   }
  ],
  "metadata": {
